--- a/src/style.css
+++ b/src/style.css
@@ -441,7 +441,6 @@ p {
   color: #ffffff;
 }
 
-/* Stiluri pentru Itinerarii */
 .itineraries-container {
   background-color: rgba(0, 0, 0, 0.8);
   padding: 2rem;
@@ -813,7 +812,6 @@ p {
   color: #f39c12;
 }
 
-/* Container pentru itinerarii */
 .itineraries-container {
   background-color: rgba(0, 0, 0, 0.8);
   padding: 2rem;
@@ -825,7 +823,6 @@ p {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
 
-/* Titlu */
 .section-title {
   font-size: 1.8rem;
   text-align: center;
@@ -833,7 +830,6 @@ p {
   margin-bottom: 1rem;
 }
 
-/* Grup input + buton */
 .itinerary-input-group {
   display: flex;
   gap: 1rem;
@@ -870,14 +866,12 @@ p {
   background-color: #ff6399;
 }
 
-/* Listă de carduri */
 .itinerary-list {
   display: flex;
   flex-direction: column;
   gap: 1rem;
 }
 
-/* Cardurile itinerariilor */
 .itinerary-card {
   background-color: rgba(45, 47, 54, 0.9);
   padding: 1.5rem;
@@ -894,14 +888,12 @@ p {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
 
-/* Titlul itinerariului */
 .itinerary-title {
   font-size: 1.2rem;
   font-weight: bold;
   color: #ff4081;
 }
 
-/* Buton de ștergere */
 .delete-itinerary-button {
   background-color: #ff4081;
   color: #fff;
@@ -916,7 +908,6 @@ p {
   background-color: #ff6399;
 }
 
-/* To-Do și Recomandări */
 .itinerary-details {
   margin-top: 1rem;
 }
@@ -1012,13 +1003,13 @@ p {
 
 .delete-itinerary-button,
 .export-itinerary-button {
-  width: 100%; /* Asigură-te că butoanele sunt egale ca dimensiune */
+  width: 100%; 
   text-align: center;
 }
 
-/* Stil modern pentru buton */
+
 .view-map-button {
-  background-color: #ff5a5f; /* O nuanță de roșu modern */
+  background-color: #ff5a5f;
   color: white;
   padding: 10px 20px;
   border: none;
@@ -1031,11 +1022,10 @@ p {
 }
 
 .view-map-button:hover {
-  background-color: #ff2a2f; /* O nuanță mai închisă la hover */
+  background-color: #ff2a2f; 
   transform: translateY(-2px);
 }
 
-/* Stil modern pentru câmpul de căutare */
 .location-input {
   width: 100%;
   max-width: 400px;
@@ -1053,7 +1043,7 @@ p {
 }
 
 .export-all-button {
-  background-color: #ff6b6b; /* Un roșu cald */
+  background-color: #ff6b6b; 
   color: #fff;
   font-size: 16px;
   font-weight: bold;
@@ -1067,13 +1057,13 @@ p {
 }
 
 .export-all-button:hover {
-  background-color: #e63946; /* O nuanță mai închisă de roșu */
-  transform: scale(1.05); /* Mărește ușor dimensiunea */
+  background-color: #e63946; 
+  transform: scale(1.05); 
   box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
 }
 
 .export-all-button:active {
-  transform: scale(1); /* Revine la dimensiunea normală */
+  transform: scale(1); 
   box-shadow: 0 3px 4px rgba(0, 0, 0, 0.2);
 }
 
